--- a/todoApp/index.html
+++ b/todoApp/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do App</title>
+    <style>
+      body, html{
+        background-color: #18181b;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
